--- a/.github/workflows/build-and-push-to-docker.yml
+++ b/.github/workflows/build-and-push-to-docker.yml
@@ -24,10 +24,11 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
 
-      - name: Publish Docker
+      - name: Publish Docker Image for Backend
         uses: elgohr/Publish-Docker-Github-Action@3.04
         with:
           name: oguzhanogreden2/rate-that-bench
           username: ${{ secrets.DOCKER_HUB_USERNAME }}
           password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+          workdir: backend
           dockerfile: Dockerfile
