Installed Terraform on droplet  (#3)
* Create droplet with TerraForm

* Added remote-exec provisioners for backend

* Added readme & parametrized backend image tag

--- a/.github/workflows/build-and-push-to-docker.yml
+++ b/.github/workflows/build-and-push-to-docker.yml
@@ -32,3 +32,4 @@ jobs:
           password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
           workdir: backend
           dockerfile: Dockerfile
+          tags: "${{ github.head_ref }}"
