--- a/rate-that-bench/package.json
+++ b/rate-that-bench/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-server": "~12.2.0",
     "@angular/router": "~12.2.0",
     "@angular/service-worker": "~12.2.0",
+    "@auth0/auth0-angular": "^1.8.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
