--- a/rate-that-bench/package.json
+++ b/rate-that-bench/package.json
@@ -25,6 +25,7 @@
     "@angular/router": "~12.2.0",
     "@angular/service-worker": "~12.2.0",
     "@googlemaps/js-api-loader": "^1.12.4",
+    "pretty-quick": "^3.1.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
